--- a/web/src/app.html
+++ b/web/src/app.html
@@ -5,6 +5,17 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+
+		<style>
+			body {
+				margin: 0;
+        background-image: url('/space.webp') no-repeat center center fixed;
+        background-size: cover;
+      	font-family: "Trebuchet MS", Helvetica, sans-serif;
+      	line-height: 1.3;
+				
+			}
+		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
