--- a/web/src/app.html
+++ b/web/src/app.html
@@ -9,6 +9,12 @@
 		<style>
 			* {
 				box-sizing: border-box;
+				text-wrap: balance;
+			}
+			html,
+			body {
+				width: 100%;
+				height: 100%;
 			}
 			body {
 				margin: 0;
@@ -19,6 +25,9 @@
 				display: flex;
 				flex-direction: column;
 				align-items: center;
+			}
+			button {
+				cursor: pointer;
 			}
 		</style>
 	</head>
